Fixed overlapping of scroll to top button with chatbot (#828)

--- a/style.css
+++ b/style.css
@@ -619,7 +619,7 @@ footer p a {
 
 #progress {
     position: fixed;
-    bottom: 14px;
+    bottom: 20px;
     right: 10px;
     height: 50px;
     width: 50px;
